Added Final Form Components

--- a/src/components/FinalForm/forms/LoginForm/LoginForm.scss
+++ b/src/components/FinalForm/forms/LoginForm/LoginForm.scss
@@ -1,15 +1,6 @@
 .login-form, .register-form{
-    padding-bottom: 10px;
-    
-    .container-field{
-        padding-top: 10px;
-    }
-
-    .container-login-button{
-        display: flex;
+    padding-bottom: 10px;   
+    .fields{
         justify-content: center;
-        align-items: center;
-
-        padding-top: 20px;
-    }
+    } 
 }
